# cookiecutter-getpaid-backend

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.repo_name}}/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
{{cookiecutter.repo_name}}/.github/: ISSUE_TEMPLATE.md
{{cookiecutter.repo_name}}/docs/: changelog.md  concepts.md  conf.py  configuration.md  getting-started.md  index.md  reference.md
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/: __init__.py  client.py  processor.py  types.py
{{cookiecutter.repo_name}}/tests/: conftest.py  test_processor.py
