[project]
name = '{{ cookiecutter.pypi_name }}'
version = '{{ cookiecutter.version }}'
description = '{{ cookiecutter.project_description }}'
readme = 'README.md'
license = {text = '{{ cookiecutter.open_source_license }}'}
authors = [
    {name = '{{ cookiecutter.full_name }}', email = '{{ cookiecutter.email }}'},
]
requires-python = '>=3.12'
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',{% if cookiecutter.open_source_license == 'MIT' %}
    'License :: OSI Approved :: MIT License',{% elif cookiecutter.open_source_license == 'BSD-3-Clause' %}
    'License :: OSI Approved :: BSD License',{% elif cookiecutter.open_source_license == 'Apache-2.0' %}
    'License :: OSI Approved :: Apache Software License',{% endif %}
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Office/Business :: Financial',
    'Topic :: Office/Business :: Financial :: Point-Of-Sale',
    'Typing :: Typed',
]
dependencies = [
    'python-getpaid-core>=0.1.0',
    'httpx>=0.27.0',
]

[dependency-groups]
dev = [
    'pytest>=8.0',
    'pytest-asyncio>=0.24.0',
    'pytest-cov>=5.0',
    'respx>=0.22.0',
    'ruff>=0.9.0',
    'pre-commit>=4.0',
    'ty>=0.0.16',
]
docs = [
    'furo>=2024.8.6',
    'sphinx>=8.0',
    'myst-parser>=4.0',
]

[project.urls]
Homepage = 'https://github.com/{{ cookiecutter.github_org }}/{{ cookiecutter.repo_name }}'
Repository = 'https://github.com/{{ cookiecutter.github_org }}/{{ cookiecutter.repo_name }}'
Documentation = 'https://{{ cookiecutter.repo_name }}.readthedocs.io/'
Changelog = 'https://github.com/{{ cookiecutter.github_org }}/{{ cookiecutter.repo_name }}/releases'

[project.entry-points."getpaid.backends"]
{{ cookiecutter.gateway_slug }} = '{{ cookiecutter.package_name }}.processor:{{ cookiecutter.processor_class_name }}'

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.build.targets.wheel]
packages = ['src/{{ cookiecutter.package_name }}']

[tool.pytest.ini_options]
testpaths = ['tests']
asyncio_mode = 'auto'

[tool.coverage.run]
branch = true
source = ['{{ cookiecutter.package_name }}']

[tool.coverage.report]
show_missing = true

[tool.ruff]
target-version = 'py312'
line-length = 80
src = ['src', 'tests']

[tool.ruff.lint]
select = [
    'E',
    'W',
    'F',
    'I',
    'N',
    'UP',
    'B',
    'A',
    'SIM',
    'TC',
    'RUF',
]
ignore = [
    'N818',
    'B027',
]

[tool.ruff.lint.per-file-ignores]
'tests/**' = ['TC001', 'RUF012']

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2
known-first-party = ['{{ cookiecutter.package_name }}']

[tool.ty.environment]
python-version = '3.12'

[tool.ty.terminal]
error-on-warning = true

[[tool.ty.overrides]]
include = ['tests/**']
[tool.ty.overrides.rules]
unresolved-attribute = 'ignore'
invalid-argument-type = 'ignore'

[[tool.ty.overrides]]
include = ['src/{{ cookiecutter.package_name }}/processor.py']
[tool.ty.overrides.rules]
unresolved-attribute = 'ignore'
call-non-callable = 'ignore'
